css login section

--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,6 @@ body {
 }
 .wrap #aside .login form {
   margin: 0 auto;
-  text-align: center;
   border: solid 1px #ccc;
   border-radius: 3px;
   box-shadow: 1px 0px 5px black;
@@ -291,29 +290,49 @@ body {
 }
 .wrap #aside .login form input[type=submit],
 .wrap #aside .login form input[type=reset] {
-  width: 30%;
-  height: 30px;
+  text-align: center;
+  width: 100px;
+  height: 35px;
+  margin-top: 10px;
   border-radius: 3px;
-  background: rgb(16, 127, 174);
   color: white;
+  background: linear-gradient(to bottom, rgb(16, 127, 174) 0%, rgb(3, 65, 91) 100%);
   text-transform: uppercase;
   border: solid 1px #ccc;
-  display: block;
   float: left;
-  margin: 5%;
+  cursor: pointer;
+  font-size: 15px;
+  font-family: "TrebuchetMS";
+  margin-left: 23px;
+  margin-bottom: 10px;
+}
+.wrap #aside .login form input[type=reset] {
+  margin-right: 20px;
+}
+.wrap #aside .login form input[type=submit]:hover,
+.wrap #aside .login form input[type=reset]:hover {
+  background: rgb(16, 127, 174);
 }
 .wrap #aside .login form a {
-  color: rgb(45, 171, 225);
+  color: #555;
+  display: block;
+  font-size: 14px;
   text-decoration: none;
+  margin-top: 5px;
+  margin-left: 24px;
+}
+.wrap #aside .login form a:hover {
+  color: #37bcf9;
 }
 .wrap #aside #social {
   padding: 20px;
-  width: 150px;
+  width: 200px;
   height: 305px;
   border: solid 1px #ccc;
   box-shadow: 1px 1px 8px black;
   margin: 20px auto;
   background: white;
+  font-family: "WebSymbolsRegular";
 }
 
 /*# sourceMappingURL=style.css.map */
