finished fisrt skeleton layout

--- a/css/style.scss
+++ b/css/style.scss
@@ -70,10 +70,6 @@ body {
                 font-size: 30px;
             }
 
-            span {
-
-            }
-
             h3 {
                 font-size: 40px;
                 float: right;
@@ -113,9 +109,7 @@ body {
 }
 
 .wrap {
-
     #info {
-
         #banner {
             width: 90%;
             margin: 20px auto;
@@ -204,7 +198,9 @@ body {
         font-family: 'TrebuchetMS';
         display: block;
         float: right;
-        margin: 4.6%;
+        margin-top: 2%;
+        margin-right: 5%;
+        margin-bottom: -5%;
 
         .icon {
             display: block;
@@ -394,20 +390,213 @@ body {
         #social {
             padding: 20px;
             width: 200px;
-            height: 305px;
+            height: 185px;
             border: solid 1px #ccc;
             box-shadow: 1px 1px 8px black;
             margin: 20px auto;
             background: white;
             font-family: 'WebSymbolsRegular'; 
 
-            .twitter a, .youtube a, .facebook a {
-                
+            a {
+                display: block;
+                color: #333;
+                text-decoration: none;
+                font-size: 30px;
+                margin: 20px 0px;
+            }
+        }
+
+        #sponsors {
+            padding: 20px;
+            width: 200px;
+            height: 185px;
+            border: solid 1px #ccc;
+            box-shadow: 1px 1px 8px black;
+            margin: 20px auto;
+            background: white;
+            font-family: 'WebSymbolsRegular'; 
+        }
+    }
+
+    #articles {
+        width: 800px;
+        display: block;
+        float: left;
+        margin: 2% auto;
+
+        h2 {
+            width: 86%;
+            height: 75px;
+            line-height:75px;
+            text-align: center;
+            letter-spacing: 2px;
+            margin: 0 auto;
+            box-shadow: 1px 1px 5px black;
+            font-family: 'BebasNeue';
+            background: #ccc;
+            font-size: 40px;;
+            font-weight: normal;
+            color: black;
+        }
+
+        article {
+            width: 86%;
+            margin: 3% auto;
+            height: auto;
+            border: solid 1px #ccc;
+            padding: 0px;
+            font-family: 'TrebuchetMS';
+            background: white;
+            color: black;
+            box-shadow: 1px 1px 8px rgb(146, 145, 145);
+
+            .data {
+                    color: white;
+                    background: rgb(57, 56, 56);
+                    display: block;
+                    float: right;
+                    width: auto;
+                    height: 30px;
+                    line-height: 30px;
+                    margin: -1px;
+                    font-size: 12px;       
+                    padding: 4px;      
+                    border-radius: 0px 0px 0px 5px;  
+
+                    span {
+                        margin: 5px;
+                    }
+            }
+
+            h4 {
+                display: block;
+                font-size: 23px;
+                margin: 3px;
+                padding: 2%;
+                // padding-bottom: 0;
+                a {
+                    text-decoration: none;
+                    color: $font-color-secondary;                                       
+                }
+            }
+
+            p {
+                padding: 2%;
+                font-size: 15px;
+            }
+        }
+
+        #blog {
+            width: 86%;
+            height: 100px;
+            line-height:100px;
+            text-align: center;
+            letter-spacing: 2px;
+            margin: 0 auto;
+            box-shadow: 1px 1px 5px black;
+            font-family: 'BebasNeue';
+            background: white;
+            font-size: 40px;;
+            font-weight: normal;
+
+            a {
+                display: block;
+                color: $font-color-secondary;
+                text-decoration: none;
             }
         }
     }
 
 }
 
+footer {
+    width: 100%;    
+    height: 470px;
+    background: black;
+    color: white;
+    overflow: hidden;
+
+    .wrap {
+        div, nav {
+            float: left;
+            width: 320px;
+            height: 370px;
+            margin: 40px;
+            text-align: center;
+            color: white;
+            font-family: 'TrebuchetMS';
+
+            h5 {
+                display: block;
+                color: black;
+                background: white;
+                letter-spacing:2px;
+                text-align: center;
+                font-family: 'BebasNeue';
+                font-size: 40px;
+                height: 40px;
+                line-height: 40px;
+                border-radius: 5px;
+                padding: 5px;
+                margin-bottom: 15px;
+            }
+
+            ul {
+                text-align: left;
+                margin: 20px;
+                font-size: 25px;
+
+                li {
+                    margin-top: 10px;
+                    padding:5px;
+                    border-bottom: 1px solid #ccc;
+                    
+                    a {
+                        display: block;
+                        height: 40px;
+                        text-transform: uppercase;
+                    }
+                }
+            }
+        }
+
+        #nav-footer {
+            a {
+                text-decoration: none;
+                color: $font-color;
+                transition: all 300ms;
+            }
+        }
+    
+        #location {          
+            iframe {
+                width: 100%;
+                height: 300px;                
+                margin-top: 10px;
+                border-radius: 5px;
+                border: solid 1px white;
+                box-shadow: 0px 0x 5px #ccc;
+            }
+        }
+    
+        #info {
+            img {
+                margin-bottom: 15px;
+            }
+               
+            #browsers {    
+                a {
+                    img {                        
+                        width: 45px;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
+.clearfix {
+    float: none;
+    clear: both;
+}
