--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,9 @@ body {
   font-family: "TrebuchetMS";
   display: block;
   float: right;
-  margin: 4.6%;
+  margin-top: 2%;
+  margin-right: 5%;
+  margin-bottom: -5%;
 }
 .wrap #aside .icon {
   display: block;
@@ -327,12 +329,178 @@ body {
 .wrap #aside #social {
   padding: 20px;
   width: 200px;
-  height: 305px;
+  height: 185px;
   border: solid 1px #ccc;
   box-shadow: 1px 1px 8px black;
   margin: 20px auto;
   background: white;
   font-family: "WebSymbolsRegular";
+}
+.wrap #aside #social a {
+  display: block;
+  color: #333;
+  text-decoration: none;
+  font-size: 30px;
+  margin: 20px 0px;
+}
+.wrap #aside #sponsors {
+  padding: 20px;
+  width: 200px;
+  height: 185px;
+  border: solid 1px #ccc;
+  box-shadow: 1px 1px 8px black;
+  margin: 20px auto;
+  background: white;
+  font-family: "WebSymbolsRegular";
+}
+.wrap #articles {
+  width: 800px;
+  display: block;
+  float: left;
+  margin: 2% auto;
+}
+.wrap #articles h2 {
+  width: 86%;
+  height: 75px;
+  line-height: 75px;
+  text-align: center;
+  letter-spacing: 2px;
+  margin: 0 auto;
+  box-shadow: 1px 1px 5px black;
+  font-family: "BebasNeue";
+  background: #ccc;
+  font-size: 40px;
+  font-weight: normal;
+  color: black;
+}
+.wrap #articles article {
+  width: 86%;
+  margin: 3% auto;
+  height: auto;
+  border: solid 1px #ccc;
+  padding: 0px;
+  font-family: "TrebuchetMS";
+  background: white;
+  color: black;
+  box-shadow: 1px 1px 8px rgb(146, 145, 145);
+}
+.wrap #articles article .data {
+  color: white;
+  background: rgb(57, 56, 56);
+  display: block;
+  float: right;
+  width: auto;
+  height: 30px;
+  line-height: 30px;
+  margin: -1px;
+  font-size: 12px;
+  padding: 4px;
+  border-radius: 0px 0px 0px 5px;
+}
+.wrap #articles article .data span {
+  margin: 5px;
+}
+.wrap #articles article h4 {
+  display: block;
+  font-size: 23px;
+  margin: 3px;
+  padding: 2%;
+}
+.wrap #articles article h4 a {
+  text-decoration: none;
+  color: rgb(16, 127, 174);
+}
+.wrap #articles article p {
+  padding: 2%;
+  font-size: 15px;
+}
+.wrap #articles #blog {
+  width: 86%;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  letter-spacing: 2px;
+  margin: 0 auto;
+  box-shadow: 1px 1px 5px black;
+  font-family: "BebasNeue";
+  background: white;
+  font-size: 40px;
+  font-weight: normal;
+}
+.wrap #articles #blog a {
+  display: block;
+  color: rgb(16, 127, 174);
+  text-decoration: none;
+}
+
+footer {
+  width: 100%;
+  height: 470px;
+  background: black;
+  color: white;
+  overflow: hidden;
+}
+footer .wrap div, footer .wrap nav {
+  float: left;
+  width: 320px;
+  height: 370px;
+  margin: 40px;
+  text-align: center;
+  color: white;
+  font-family: "TrebuchetMS";
+}
+footer .wrap div h5, footer .wrap nav h5 {
+  display: block;
+  color: black;
+  background: white;
+  letter-spacing: 2px;
+  text-align: center;
+  font-family: "BebasNeue";
+  font-size: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 15px;
+}
+footer .wrap div ul, footer .wrap nav ul {
+  text-align: left;
+  margin: 20px;
+  font-size: 25px;
+}
+footer .wrap div ul li, footer .wrap nav ul li {
+  margin-top: 10px;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+}
+footer .wrap div ul li a, footer .wrap nav ul li a {
+  display: block;
+  height: 40px;
+  text-transform: uppercase;
+}
+footer .wrap #nav-footer a {
+  text-decoration: none;
+  color: #37bcf9;
+  transition: all 300ms;
+}
+footer .wrap #location iframe {
+  width: 100%;
+  height: 300px;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: solid 1px white;
+  box-shadow: 0px 0x 5px #ccc;
+}
+footer .wrap #info img {
+  margin-bottom: 15px;
+}
+footer .wrap #info #browsers a img {
+  width: 45px;
+}
+
+.clearfix {
+  float: none;
+  clear: both;
 }
 
 /*# sourceMappingURL=style.css.map */
