--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,12 @@ body {
 }
 .wrap #info .cards .card {
   padding: 20px;
-  width: 180px;
+  width: 14%;
   height: 305px;
   border: solid 1px #ccc;
   box-shadow: 1px 1px 8px black;
   margin: 5px;
-  margin-top: 40px;
+  margin-top: 2%;
   display: block;
   float: left;
   overflow: hidden;
@@ -259,11 +259,11 @@ body {
   float: left;
   background: transparent;
   border: none;
-  padding-left: 2px;
+  padding-left: 0px;
   font-size: 16px;
   color: #555;
   height: 25px;
-  width: 5%;
+  width: 3%;
 }
 .wrap #aside .login form #user {
   position: absolute;
@@ -439,6 +439,9 @@ footer {
   background: black;
   color: white;
   overflow: hidden;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
 footer .wrap div, footer .wrap nav {
   float: left;
