--- a/css/style.scss
+++ b/css/style.scss
@@ -137,12 +137,12 @@ body {
 
             .card {
                 padding: 20px;
-                width: 180px;
+                width: 14%;
                 height: 305px;
                 border: solid 1px #ccc;
                 box-shadow: 1px 1px 8px black;
                 margin: 5px;
-                margin-top: 40px;
+                margin-top: 2%;
                 display: block;
                 float: left;
                 overflow: hidden;
@@ -303,7 +303,7 @@ body {
                     float: left;
                     background: transparent;
                     border: none;
-                    padding-left: 2px;
+                    padding-left: 0px;
                     font-size: 16px;
                     color: #555;
                     // border-top: 1px solid #ccc;
@@ -311,7 +311,7 @@ body {
                     // border-left: 1px solid #ccc;
                     // border-radius: 5px;
                     height: 25px;
-                    width: 5%;
+                    width: 3%;
                 }
 
                 #user {
@@ -515,6 +515,10 @@ footer {
     background: black;
     color: white;
     overflow: hidden;
+
+    display: flex;
+    text-align: center;
+    justify-content: center;
 
     .wrap {
         div, nav {
