--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,9 +15,9 @@
   .card {
     width: 16%;
     margin: 1%;
+    height: auto;
   }
   footer .wrap div {
-    width: 25%;
     margin: 2%;
   }
   footer .wrap div h5 {
@@ -28,6 +28,156 @@
   }
   footer .wrap nav h5 {
     font-size: 25px;
+  }
+}
+@media (max-width: 1204px) {
+  footer {
+    width: 116%;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 1112px) {
+  .wrap #articles {
+    width: 62%;
+  }
+  .wrap #info .cards .card .description {
+    margin-top: 10%;
+    font-size: 10px;
+  }
+  .wrap #info .cards .card h2 {
+    font-size: 14px;
+  }
+  .wrap #info .cards .card .category {
+    font-size: 17px;
+  }
+  .wrap #info .cards .card .description {
+    font-size: 14px;
+  }
+}
+@media (max-width: 1091px) {
+  .wrap #info .cards .card {
+    width: 11%;
+  }
+}
+@media (max-width: 1013px) {
+  #header {
+    width: 100%;
+  }
+  #header #wrap {
+    width: 766px;
+  }
+  .wrap #articles {
+    width: 60%;
+  }
+  footer .wrap {
+    margin: 0;
+  }
+}
+@media (max-width: 953px) {
+  .wrap #info #articles {
+    width: 50%;
+  }
+  .wrap #info #aside {
+    width: 25%;
+  }
+  footer {
+    width: 105%;
+  }
+  footer .wrap #nav-footer, footer .wrap #location, footer .wrap #info {
+    width: 20%;
+  }
+  footer .wrap #nav-footer ul li a, footer .wrap #location ul li a, footer .wrap #info ul li a {
+    font-size: 15px;
+  }
+}
+@media (max-width: 925px) {
+  .wrap #aside #search form input[type=text] {
+    width: 78%;
+  }
+  .wrap #info #aside {
+    width: 40%;
+  }
+}
+@media (max-width: 900px) {
+  .wrap #info .cards .card {
+    height: auto;
+  }
+  .wrap #info .cards .card .description {
+    display: none;
+  }
+  .wrap #info .cards .card .icon {
+    height: auto;
+  }
+  footer .wrap #info img {
+    max-width: 100%;
+  }
+}
+@media (max-width: 724px) {
+  #header {
+    height: 150px;
+    width: 107%;
+  }
+  #header #wrap nav {
+    float: none;
+    clear: both;
+    margin: 0 auto;
+    width: 440px;
+  }
+  #header #wrap #logo {
+    margin: 0 auto;
+    float: none;
+  }
+}
+@media (max-width: 724px) and (max-width: 688px) {
+  footer {
+    width: 116%;
+    height: auto;
+    margin-bottom: 10%;
+  }
+  footer .wrap #nav-footer, footer .wrap #location, footer .wrap #info {
+    width: 78%;
+  }
+  footer footer .wrap #nav-footer, footer footer .wrap #location, footer footer .wrap #info {
+    height: auto;
+  }
+  footer .wrap #info {
+    height: auto;
+  }
+  #header {
+    width: 116%;
+  }
+  .wrap {
+    padding-left: 4.7%;
+    width: 100%;
+  }
+  .wrap #info #aside {
+    padding-top: 5%;
+    margin: 0 auto;
+    width: 100%;
+    min-height: auto;
+  }
+  .wrap #info #aside #search form input[type=text] {
+    width: 93%;
+  }
+  .wrap #info #aside .login form #user, .wrap #info #aside .login form #password {
+    margin-left: 7%;
+  }
+  .wrap #info #articles {
+    width: 100%;
+  }
+  .wrap #info #banner {
+    width: 100%;
+  }
+  .wrap #info #banner h1 {
+    font-size: 25px;
+    width: auto;
+  }
+  .wrap #info .cards .card {
+    width: 100%;
+    margin-left: 0;
+  }
+  .wrap #info .cards .card:first-child {
+    margin-left: 0;
   }
 }
 
